fix: move overflow-x clip to css and remove from App className

--- a/website/src/index.css
+++ b/website/src/index.css
@@ -26,6 +26,7 @@ body,
 
 html {
   background-color: var(--background-color) !important;
+  overflow-x: clip;
 }
 
 body {
@@ -37,6 +38,7 @@ body {
   font-size: 1rem;
   line-height: 1.5;
   font-weight: 400;
+  overflow-x: clip;
 }
 
 section[id] {
